<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp">

    <TextView
        android:id="@+id/nama_scan"
        android:textSize="18sp"
        android:hint="@string/lv_scan_nama"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/nik_scan"
        android:textSize="14sp"
        android:hint="@string/lv_scan_nik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nama_scan"/>
    <TextView
        android:id="@+id/devisi_scan"
        android:textSize="14sp"
        android:hint="@string/lv_scan_devisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nik_scan"/>
    <TextView
        android:id="@+id/jam_scan"
        android:textSize="14sp"
        android:hint="@string/lv_scan_jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/nik_scan"
        android:layout_alignParentEnd="true" />

</RelativeLayout>