<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <TextView
        android:id="@+id/tv_nama_pegawai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lv_nama"
        style="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/tv_nik_pegawai"
        android:layout_below="@id/tv_nama_pegawai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lv_nik"
        android:textSize="14sp"
        />
    <TextView
        android:id="@+id/tv_devisi_pegawai"
        android:layout_below="@id/tv_nik_pegawai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lv_devisi"
        android:textSize="14sp"
        />

    <!--<ImageButton
        android:id="@+id/img_show_menu_selection"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_nama_pegawai"
        android:src="@drawable/ic_baseline_more_vert_24"
        android:background="?attr/selectableItemBackgroundBorderless"/>-->

</RelativeLayout>