<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <TextView
        android:id="@+id/tv_data_produk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lv_produk"
        style="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/tv_data_jenis"
        android:layout_below="@id/tv_data_produk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lv_jenis"
        android:textSize="14sp"
        />
    <TextView
        android:id="@+id/tv_data_price"
        android:layout_below="@id/tv_data_jenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lv_price"
        android:textSize="14sp"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_show_menu_produk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_more_vert_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="6dp"
        android:layout_marginEnd="6dp"
        android:layout_alignBaseline="@id/tv_data_produk"
        android:clickable="true"
        android:focusable="true"/>

</RelativeLayout>