<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="75dp"
    tools:context=".Sistem_Manual.DataGroupManualFragment">

    <RelativeLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#45B730"
        android:padding="10dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_fragment"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout_manual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_title"
        android:backgroundTint="@color/purple_500"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorHeight="3dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_twotone_assignment_24"
            android:text="@string/tv_produk_data" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_twotone_assignment_turned_in_24"
            android:text="@string/tv_penjualan_data" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_twotone_description_24"
            android:text="@string/tv_data_export" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager_manual"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tablayout_manual" />

</RelativeLayout>