<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingRight="6dp"
    android:paddingEnd="6dp"
    android:paddingLeft="6dp"
    android:paddingStart="6dp"
    tools:context=".SelectionActivity"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/tv_pilih_sistem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_pilih_sistem"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sistem_scan"
        android:layout_below="@id/tv_pilih_sistem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sistem_scan"
        android:drawableTop="@drawable/ic_baseline_qr_code_scanner_24"
        android:textColor="@color/white"
        android:background="@drawable/btn_sistem_scan"
        android:clickable="true"
        android:focusable="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sistem_manual"
        android:layout_below="@id/sistem_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sistem_manual"
        android:layout_marginTop="16dp"
        android:drawableTop="@drawable/ic_baseline_create_24"
        android:textColor="@color/white"
        android:background="@drawable/btn_sistem_manual"
        android:clickable="true"
        android:focusable="true"/>

</RelativeLayout>