<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Sistem_Manual.BottomModalExportFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_dialog_kirim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_dialog_kirim_file"
        android:padding="8dp"
        android:theme="@style/SelectableItemTheme"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:drawableStart="@drawable/ic_baseline_send_32"
        android:drawableLeft="@drawable/ic_baseline_send_32"
        android:drawablePadding="16dp"
        android:gravity="start|center_vertical" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_dialog_buka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_dialog_buka_file"
        android:padding="8dp"
        android:theme="@style/SelectableItemTheme"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:drawableStart="@drawable/ic_baseline_open_in_new_32"
        android:drawableLeft="@drawable/ic_baseline_open_in_new_32"
        android:drawablePadding="16dp"
        android:gravity="start|center_vertical" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_dialog_hapus_rekap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_dialog_hapus_file"
        android:padding="8dp"
        android:theme="@style/SelectableItemTheme"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:drawableStart="@drawable/ic_baseline_delete_outline_32"
        android:drawableLeft="@drawable/ic_baseline_delete_outline_32"
        android:drawablePadding="16dp"
        android:gravity="start|center_vertical" />

</androidx.appcompat.widget.LinearLayoutCompat>