<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sistem_Scan.UpdateFragment">
    <LinearLayout
        android:id="@+id/ll_title_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#45B300">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_fragment"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <View
        android:layout_below="@id/ll_title_home"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9F9F9F"
        android:visibility="visible"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ID_pegawai"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ln_nik"/>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:id="@+id/ln_nik"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_below="@id/ll_title_home"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_nik_new"
                android:inputType="text"
                android:hint="@string/tv_input_nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <requestFocus/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_nama"
        android:layout_marginTop="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_below="@id/ln_nik"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_nama_new"
                android:inputType="text"
                android:hint="@string/tv_input_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_devisi"
        android:layout_marginTop="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_below="@id/ln_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/spinner_input_divisi">
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/act_dropdown_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/ln_devisi"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ubah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/btn_simpan_data"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/btn_ubah"
            android:textAllCaps="false"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>