<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="75dp"
    android:gravity="center"
    tools:context=".Sistem_Scan.DataGroupScanFragment">

    <RelativeLayout
        android:id="@+id/ll_title_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500">
        <TextView
            android:id="@+id/tv_title_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_fragment"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_title_data"
        android:backgroundTint="@color/purple_500"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorHeight="3dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_twotone_people_alt_24"
            android:text="@string/tv_data_pegawai" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_twotone_article_24"
            android:text="@string/tv_data_scan" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_twotone_description_24"
            android:text="@string/tv_data_export" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tablayout" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_save_alt_24"
            android:visibility="invisible"
            android:layout_margin="20dp"
            app:tint="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            android:visibility="visible"
            android:layout_margin="20dp"
            app:tint="@null" />
    </LinearLayout>
</RelativeLayout>